--- a/css/compra.css
+++ b/css/compra.css
@@ -167,7 +167,7 @@ section {
   
   .container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: auto;
     padding: 20px;
     
     
@@ -208,6 +208,7 @@ section {
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    margin-left: 80px;
   }
   
   button:hover {
