--- a/css/produtos.css
+++ b/css/produtos.css
@@ -4,7 +4,6 @@
 :root{
     --main-color: rgb(255, 200, 128);
     --black: #13131a;
-    /*--bg: #0e0007;*/
     --bg: #3F0D0E;
     --border: .1rem solid rgba(255,255,255,.3);
 }
@@ -16,7 +15,6 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: .2s linear;
 }
 
@@ -172,14 +170,12 @@ body{
     width: 50%;
     line-height: 1.8;
     text-indent: 20px;
-    /*text-align: justify;*/
     word-spacing: 3px;
 
 }
 
 
 footer {
-    /*background-color: #333;*/
     color: #fff;
     padding: 40px 0px;
     
@@ -234,7 +230,7 @@ textarea {
 
 .footer-col{
     float: left;
-    margin-top: -30px; /* Reduz a margem superior para mover o footer-col mais para cima */
+    margin-top: -30px;
     padding: 30px;
     color: white;
     gap: 5px;
@@ -300,10 +296,6 @@ textarea {
 	background-color: #ffffff;
 }
 
-
-
-
-
 section{
     min-height: 100vh;
 }
@@ -346,6 +338,9 @@ h1{
 .catalogo p{
     font-family: 'Handlee', cursive;
     
+}
+.catalogo:hover{
+    transform: scale(1.1);
 }
 
 .nomeproduto{
@@ -407,7 +402,7 @@ h1{
 
 }
 
-.catalogo button:hover{
+.catalogo:hover button{
     background-color: #22040499;
     color:#000000b5;
     transform: scale(1.05);
