--- a/css/compra.css
+++ b/css/compra.css
@@ -166,8 +166,15 @@ section {
   .container {
     max-width: 400px;
     margin: auto;
-    padding: 20px;
-    
+    margin-top: 290px;
+    color: white;
+    top: 80%;
+    left: 40%;
+    transform: translate(-25%, -25%);
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 15px;
+    border-radius: 15px;
+    margin-right: 400px;
     
   }
   
@@ -238,7 +245,7 @@ section {
 #fundodiv{
     font-family: 'Roboto', sans-serif;
     background-color: rgb(32, 32, 32);
-    margin-top: 220px;
+    margin-top: -170px;
     padding: 80px;
     padding-top: 30px;
     height: 250px;
