--- a/css/dados.css
+++ b/css/dados.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 
 body{
-    background-color: rgb(193, 204, 183);
+    background-color: #3F0D0E;
 }
 h1{
     text-align: center;
     font-size: 30px;
     margin-top: 250px;
+    color: white;
+    font-family: 'Handlee', cursive;
     
 }
