--- a/css/pagamento.css
+++ b/css/pagamento.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+
 body{
-    background-color: rgb(183, 201, 164);
+    background-color: #3F0D0E;
 }
 h1{
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     margin-top: 250px;
-    color: rgb(0, 0, 0);
+    color: white;
+    font-family: 'Handlee', cursive;
     
 }
