--- a/css/produtos.css
+++ b/css/produtos.css
@@ -306,28 +306,7 @@ h1{
     font-family: 'Handlee', cursive;
     padding: 25px 25px;
 }
-#caixa1 h1{
-    border-radius: 45px;
-    background-color: #C27167;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-bottom: 30px;
-}
-#caixa2 h1{
-    border-radius: 45px;
-    background-color: #C27167;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-bottom: 30px;
-}
-#caixa3 h1{
-    border-radius: 45px;
-    background-color: #C27167;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-bottom: 30px;
-}
-#caixa4 h1{
+.caixa h1{
     border-radius: 45px;
     background-color: #C27167;
     margin-left: 500px;
